--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Noha Adel portofolio</title>
+  <title>Noha Adel </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -215,42 +215,99 @@
           <div class="col-lg-6" data-aos="fade-up">
             
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Education and Internship</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Engineering</h4>
+              <h5>2005 - 2010</h5>
+              <p><em>Faculty of Communication and Electronic Engineering, Helwan University</em></p>
+              <p>Final year grade: Very Good</p>
+              <p>Cumulative grade: Good</p>
+              <p>Project grade: Excellent</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Educational Diploma</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>Faculty of Education, Ain Shams University</em></p>
+              <p>Final grade: Excellent </p>
+            </div>
+            <div class="resume-item">
+              <h4>Software Engineer</h4>
+              <h5>2023 </h5>
+              <p><em>ALX Africa</em></p>
+              <p>Git - Github</p>
+              <p>Data Structure - Algorithm</p>
+              <p>C++ - Shell</p>
+            </div>
+            <div class="resume-item">
+              <h4>Back-end Developer(PHP-Laravel-MYSQL)</h4>
+              <h5>2023 - 2024</h5>
+              <p><em>Egyptian Council for Training (CTD)</em></p>
+              <p>	Backend Development Basics level Course </p>
+              <p>Backend Development Advanced level Cours</p>
+              <p>Project grade: Excellent</p>
+            </div>
+            <div class="resume-item">
+              <h4>Skills For Success</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>Ain Shams University</em></p>
+              <p>1. IT (Word & Excel & PowerPoint):  </p>
+              <p>2. Presentation Skills</p>
+              <p>3. Time Management</p>
+              <p>4. Career Development</p>
+              <p>5. Decision Making</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Work Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>E-Commerce fruits with Laravel </h4>
+              <h5>2024 - Present</h5>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Product Management: Add, edit, and delete products.</li>
+                <li>User Authentication: Secure login and registration. </li>
+                <li>Shopping Cart: Interactive cart for adding/removing products.</li>
+                <li>Order Processing: Order tracking and management.</li>
+                <li>Admin Dashboard: Manage products, orders, and users.</li>
+                <li>Payment Integration: Integrated with PayPal.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Car rental with Laravel</h4>
+              <h5>2024</h5>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Complete programming for the admin panel .</li>
+                <li>Login and registration system for users .</li>
+                <li>Authenticating users in more than one way .</li>
+                <li>Determine access services according to user permissions .</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Kider with Laravel</h4>
+              <h5>2024</h5>
+              <ul>
+                <li>Possibility of using soft deletion .</li>
+                <li>Create a database .</li>
+                <li>View updated data first on the site .</li>
+                <li>High level security protection .</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Car rental with PHP Native</h4>
+              <h5>2023</h5>
+              <ul>
+                <li>Complete programming for the admin panel .</li>
+                <li>Create a database .</li>
+                <li>Login and registration system for users .</li>
+                <li>Security protection .</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Guarder with Laravel</h4>
+              <h5>2023</h5>
+              <ul>
+                <li>User Management: Add, edit, and delete .</li>
+                <li>Create a database .</li>
+                <li>View updated data first on the site .</li>
               </ul>
             </div>
           </div>
