--- a/index.html
+++ b/index.html
@@ -322,7 +322,17 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am proficient in various technologies essential for web development and programming, including:</p>
+          <ul>
+            <li>Laravel Framework</li>
+            <li>PHP (OOP, functions, debugging)</li>
+            <li>MySQL (design, CRUD operations) </li>
+            <li>Networking (CCNA)</li>
+            <li>Office Programs</li>
+            <li>Version Control (Git, GitHub)</li>
+            <li>Web Development (HTML, CSS, Bootstrap) </li>
+            <li>Programming (C++, PHP, basic Python)</li>
+          </ul>
         </div>
 
         <div class="row" data-aos="fade-up">
@@ -448,7 +458,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="#">Noha Adel</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
