--- a/index.html
+++ b/index.html
@@ -247,14 +247,13 @@
               <p>Project grade: Excellent</p>
             </div>
             <div class="resume-item">
-              <h4>Skills For Success</h4>
+              <h4>Educational Diploma</h4>
               <h5>2018 - 2019</h5>
               <p><em>Ain Shams University</em></p>
-              <p>1. IT (Word & Excel & PowerPoint):  </p>
-              <p>2. Presentation Skills</p>
-              <p>3. Time Management</p>
-              <p>4. Career Development</p>
-              <p>5. Decision Making</p>
+              <p>1. Presentation Skills</p>
+              <p>2. Time Management</p>
+              <p>3. Career Development</p>
+              <p>4. Decision Making</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
