--- a/index.html
+++ b/index.html
@@ -326,11 +326,9 @@
             <li>Laravel Framework</li>
             <li>PHP (OOP, functions, debugging)</li>
             <li>MySQL (design, CRUD operations) </li>
-            <li>Networking (CCNA)</li>
-            <li>Office Programs</li>
             <li>Version Control (Git, GitHub)</li>
             <li>Web Development (HTML, CSS, Bootstrap) </li>
-            <li>Programming (C++, PHP, basic Python)</li>
+           
           </ul>
         </div>
 
@@ -429,9 +427,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/kider7.PNG" class="img-fluid" alt="" >
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/kider7.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
