--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/kider7.PNG" class="img-fluid" alt="" >
               <div class="portfolio-links">
